app_2/web-app-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: web-app-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-app
spec:
  hosts:
    - "*"
  gateways:
    - web-app-gateway
  http:
    - match:
        - uri:
            prefix: /time
      route:
        - destination:
            host: web-app
            port:
              number: 5000
